--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Trivia Game</title>
+    <title>Abandon Hope</title>
     <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script src="javascript/app.js"></script>
+    <script src="assets/javascript/app.js"></script>
 </head>
 
 <body>
@@ -17,13 +17,10 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="jumbotron text-center">
-                    <h1 class="page-header">Heavy Metal Trivia</h1>
-                    <h3 id="question">Here is where a question will be</h3>
-                    <div id="answers">
-                        <button type="button" class="btn btn-default btn-lg btn-block" id="answer-one">Block level button</button>
-                        <button type="button" class="btn btn-default btn-lg btn-block" id="answer-two">Block level button</button>
-                        <button type="button" class="btn btn-default btn-lg btn-block" id="answer-three">Block level button</button>
-                        <button type="button" class="btn btn-default btn-lg btn-block" id="answer-four">Block level button</button>
+                    <h1 class="page-header">Black Metal Trivia</h1>
+                    <div id="#timeDisplay"></div>
+                    <div id="quiz">
+                    <button type="button" class="btn btn-default btn-lg btn-block" id="start">Begin</button>
                     </div>
                 </div>
             </div>
