--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="jumbotron text-center">
+                    <h2 id="time-display"></h2>
                     <h1 class="page-header">Black Metal Trivia</h1>
-                    <div id="#timeDisplay"></div>
                     <div id="quiz">
-                    <button type="button" class="btn btn-default btn-lg btn-block" id="start">Begin</button>
+                        <button type="button" class="btn btn-default btn-lg btn-block" id="start">Begin</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
+    <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=342468079/size=small/bgcol=333333/linkcol=ffffff/transparent=true/"
+                        seamless>
+                        <a href="http://thereisnoreasonforanyofthistohavehappened.bandcamp.com/album/visni-itt-hold-svo-betur-megi-h-fa-eim-hug-sem-a-h-sir">Visni þitt hold svo betur megi hæfa þeim hug sem það hýsir by NYIÞ</a>
+                    </iframe>
 </body>
 
 </html>
